# video_api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TZ.md  pyproject.toml  sample.env
docker-compose/: app.yaml  storages.yaml
static/: adverts.json
tests/integrate/: Dockerfile  docker-compose-test.yaml
tests/integrate/tests/: _types.py  conftest.py  test_advert.py  test_user.py  url_resolver.py
tests/unit/: test_values.py
video_api/: alembic.ini  container.py  docker-entrypoint.sh
video_api/alembic/: env.py
video_api/alembic/versions/: 785425806a3a_init.py
video_api/core/: log.py  settings.py
video_api/domain/entities/: advert.py  base.py  session.py  user.py
video_api/domain/protocols/: advert.py  session.py  user.py
video_api/domain/values/: login.py  positive_int.py
video_api/infra/: uow.py
video_api/infra/db/: base.py  orm.py
video_api/infra/mappers/: advert.py  session.py  user.py
video_api/infra/repositories/: errors.py
video_api/infra/repositories/advert/: sqla.py
video_api/infra/repositories/session/: sqla.py
video_api/infra/repositories/user/: sqla.py
video_api/logic/interactors/: advert.py  user.py
video_api/logic/use_cases/: interface.py
video_api/logic/use_cases/advert/: __init__.py  create.py  fetch.py  fetch_list.py
video_api/logic/use_cases/user/: auth_session.py  create_user.py  errors.py  fetch_user.py  login_user.py
video_api/presentation/api/: main.py
video_api/presentation/api/error_handlers/: base_error.py  register.py
video_api/presentation/api/middlewares/: logger.py  register.py
video_api/presentation/api/routes/: register.py
video_api/presentation/api/routes/advert/: endpoints.py  register.py  schemas.py
video_api/presentation/api/routes/common/: register.py
video_api/presentation/api/routes/dependencies/: user_getter.py
video_api/presentation/api/routes/user/: endpoints.py  register.py  schemas.py
video_api/presentation/cli/: main.py
video_api/utils/: init_later_var.py
