[tool.poetry]
name = "video-api"
version = "0.1.0"
description = ""
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
aiojobs = "^1.2.1"
sqlalchemy = "^2.0.30"
dishka = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
