[tool.poetry]
name = "video-api"
version = "0.1.0"
description = ""
authors = ["likeinlife <likeinlife@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
aiojobs = "^1.2.1"
sqlalchemy = "^2.0.30"
dishka = "^1.2.0"
structlog = "^24.2.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow boolean type in func arguments
    "FBT001",
    # Allow PEP585 annotations like dict[str, str] 
    "FA102",
    # No blankline before class
    "D203",
    # Multiline string summary should start at the first line
    "D213",
    # Allow no-typehints
    "ANN101",
    "ANN102",
    # Allow public module, class, method without docstring
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    # Allow type: ignore
    "PGH003",
    # Useless
    "FBT",
    "F401",
]
exclude = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "faststream.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = []
"tests/**/*.py" = ["D", "S", "ANN"]

[tool.ruff.lint.isort]
known-first-party = [
    "presentation",
    "core",
    "domain",
    "infra",
    "logic",
    "container",
]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

[tool.pytest.ini_options]
pythonpath = "video_api"
